# EM_fleetmanager

./: .dockerignore  .env  .env.example  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  compose.yaml  deploy.ps1  deploy.sh  entrypoint.sh  exec.sh  extract_and_plot.py  frames.gv  frames_2024-06-07_09.18.14.gv  marv_pos_data_U.csv  my_map.pgm  my_map.yaml  odometry_global_data_U.csv  requirements.txt  robot_sched_post.txt  script_swagger.py  task_execution_logs.csv  trial.sh
config/: nodes.json  workflows.json
docker/: Dockerfile  compose.yaml  entrypoint.sh  ros_bashrc.sh
install/: local_setup.sh  setup.sh
log/: latest_build  latest_list
scripts/: build.sh  deployImage.sh  deploy_dev.sh  down.sh  shell.sh  start_dev.sh  up_fleet_manager.sh  up_stack.sh  up_tracker.sh
src/: run.py  trial.py
src/fleet_interfaces/: CMakeLists.txt  package.xml
src/fleet_interfaces/action/: ExecutePath.action
src/fleet_manager/: package.xml  setup.cfg  setup.py
src/marvelmind_ros2_msgs_upstream/: CHANGELOG.rst  (+3 more)
src/mob_rob_loca/: demo_picking.py  marv_to_ekf.py  package.xml  rpi_communication.py  setup.cfg  setup.py  tick_to_odom.py  transforms.py
src/mob_rob_loca/config/: ekf.yaml  ekf_em.yaml  loca.yaml  markers.yaml  nav2pose.xml  navthroughposes.xml  robot_params.ini  rpi_cam_on_robot.yaml  stations.yaml
src/mob_rob_loca/launch/: ekf.launch.py  fleet.launch.py  localization.launch.py  main.launch.py  map.launch.py  maps.launch.py  markers.launch.py  nav.launch.py  old.launch.py  plot.launch.py  ps4.launch.py  rpi.launch.py  rviz.launch.py  sensor.launch.py
src/mob_rob_loca/maps/: circuit.yaml  keepout_mask.yaml  map_server_params.yaml
src/mob_rob_loca/mob_rob_loca/: FleetManager.py  Robot_Manager.py  calib_odom.py  client.py  convert_sens_type.py  go_thru_server.py  go_to_server.py  imu.py  map.py  markers.py  marv_to_ekf.py  nav_manager.py  nav_manager2.py  nav_waypoints.py  ps4_controller_teleop.py  server.py  srv_client.py  srv_server.py  sub_plot.py  test.py  tick_to_odom.py  transforms.py  ur_action_handler.py  ur_action_request.py  vision_loca_pc.py
src/mob_rob_loca/mob_rob_loca/submodules/: Goal_Manager.py  Robot.py  RobotPlatform.py  detect_aruco_pc.py  generic_functions.py  service_sub.py  set_pose_client.py  socket_client.py  utils.py
src/mob_rob_loca/nav_params/: nav_params.yaml  navthroughposes.xml
src/mob_rob_loca/params/: bno055.yaml  edi_params_rotate_acc.yaml  ekf_em.yaml  keepout_params.yaml  nav2_essentials.yaml  nav2pose.xml  nav_params.yaml  old_nav_params.yaml
src/mob_rob_loca/rviz/: circuit.rviz  loca.rviz
src/mob_rob_loca/srv/: GoTo.srv
src/mob_rob_loca/submodules/: socket_client.py
src/mob_rob_loca/urdf/: edison.urdf
src/mob_rob_loca_msgs/: CMakeLists.txt  package.xml
src/mob_rob_loca_msgs/srv/: GetAt.srv  GetAvail.srv  GoToStation.srv
test/: Dockerfile
(+2090 files in other folders)
