<?xml version="1.0"?>
<package format="3">
  <name>fleet_interfaces</name>
  <version>0.0.1</version>
  <description>Shared messages, services, and actions for the fleet stack.</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies for message generation -->
  <depend>std_msgs</depend>

  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
